--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_bloc: ^8.1.2
   sqflite: ^2.2.4+1
   shared_preferences: ^2.0.18
+  path_provider: ^2.0.13
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
