--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ flutter:
   assets:
     - assets/images/
     - assets/fonts/
-    - assets/data/
+    - assets/data/questions.db
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
