--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path_provider: ^2.0.13
   path: ^1.8.2
   sqflite_common_ffi: ^2.2.1+1
+  sqlite3_flutter_libs: ^0.5.13
 
 dev_dependencies:
   flutter_test:
