--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path: ^1.8.2
   sqflite_common_ffi: ^2.2.1+1
   sqlite3_flutter_libs: ^0.5.13
+  quickalert: ^1.0.1
 
 dev_dependencies:
   flutter_test:
