--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   sqflite_common_ffi: ^2.2.1+1
   sqlite3_flutter_libs: ^0.5.13
   quickalert: ^1.0.1
+  circular_countdown_timer: ^0.2.3
 
 dev_dependencies:
   flutter_test:
