--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   quickalert: ^1.0.1
   circular_countdown_timer: ^0.2.3
   group_button: ^5.2.2
+  fl_chart: ^0.61.0
 
 dev_dependencies:
   flutter_test:
